<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_margin="4dp"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@android:color/white"
        android:padding="4dp"
        >
        <TextView
            android:id="@+id/casaOrigem_imageView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/palavafnl"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />
        <TextView
            android:id="@+id/casaOrigem_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/a"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/casaOrigem_imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/casa_anterior"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/anterior"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"
            android:src="@drawable/ic_house_24px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/casaOrigem_textview"
            />
        <TextView
            android:id="@+id/casaAnterior_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/b"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/casa_anterior"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/distanciamin_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/_8_3"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintStart_toEndOf="@id/casaAnterior_textview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>