<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_margin="4dp"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@android:color/white"
        android:padding="4dp"
        >
        <ImageView
            android:id="@+id/casa1_imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_house_24px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/house_photo" />
        <TextView
            android:id="@+id/casa1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/a"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/casa1_imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_arrow_right_alt_24px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/casa1_textview"
            android:contentDescription="@string/arrow" />
        <ImageView
            android:id="@+id/casa2_imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_house_24px"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/arrow"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/house_photo" />
        <TextView
            android:id="@+id/casa2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/b"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/casa2_imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/distancia_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/_8_3"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintStart_toEndOf="@id/casa2_textview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>